--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     始まりです。<br>
     Lorem ipsum dolor sit amet consectetur adipisicing elit.<br>
     云々<br>
+    すこし違いました。こうやって編集します。
 
     <!--これはコメントアウト機能です。-->
 
